# mistral-hack

./: .gitignore  LOOP_PLAN.md  PLAN.md  PRESENTATION.md  README.md  config.py  elo.py  eval_loop.py  generate.py  hf.py  ideas.md  judge.py  main.py  make_pairs.py  models.py  prompts.py  pyproject.toml  rot13.sh  scorers.py
artifacts/: all_results.json  changelog.json  prompts_v0_final.json  prompts_v1.json  prompts_v2.json  prompts_v3.json  prompts_v4.json  results_v0.json  results_v1.json  results_v2.json  results_v3.json  results_v4.json
data/: format_sft.py  prepare.py  sample_real.py
docs/: index.html
docs/api/: pairs.json  results.json  songs.json
docs/browse/: index.html
docs/leaderboard/: index.html
finetune/: generate_finetuned.py  generate_single.py  launch_experiments.py  sft_script.py  train_hf_jobs.py
judge-rs/: Cargo.toml
judge-rs/src/: main.rs
website/: Dockerfile  app.py  build.py  freeze.py  pairs.json
website/static/: browse.html  index.html  leaderboard.html  style.css
website/templates/: browse.html  index.html  leaderboard.html
